--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +13,75 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header1 {
+  display: flex;
+  justify-content: space-between;
+  background-color: #39393a;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.head1 ul {
+  list-style: none;
+  display: flex;
+  cursor: pointer;
+}
+.head1 li {
+  padding-right: 10px;
+}
+
+.head2 ul {
+  list-style: none;
+  display: flex;
+  padding-right: 40px;
+}
+
+.head2 ul li {
+  padding-left: 10px;
+}
+
+.head2 ul li input {
+  border: none;
+  padding: 3px;
+  border-radius: 5px;
+  text-align: center;
+  letter-spacing: 4px;
+}
+
+.head2 ul li button {
+  border: none;
+  background-color: #297373;
+  padding: 3px;
+  border-radius: 6px;
+  width: 70px;
+  color: white;
+}
+
+.appName {
+  letter-spacing: 3px;
+}
+
+.container button {
+  border: none;
+  background-color: #297373;
+  padding: 8px;
+  border-radius: 10px;
+  /* width: 70px; */
+  color: white;
+  margin: 6px;
+  cursor: pointer;
+}
+.content textarea {
+  border: 0.5px solid grey;
+}
+
+.prev {
+  border: 0.5px solid black;
+  background-color: whitesmoke;
+  font-size: 14px;
+  padding-right: 90px;
+  padding-left: 90px;
+}
+.prev h3 {
+  font-size: 25px;
+  margin-bottom: 10px;
 }
